--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 }
 
 .card{
-    background-color: #fafaf9;
+    background-color: #fff;
     max-width: 368px;
     width: 100%;
     padding: 1rem;
